--- a/full-docker/node/client/src/App.css
+++ b/full-docker/node/client/src/App.css
@@ -4,6 +4,8 @@
 
 .App-logo {
   height: 40vmin;
+  max-width: 75%;
+  padding-top: 3rem;
 }
 
 .App-header {
@@ -19,4 +21,60 @@
 
 .App-link {
   color: #09d3ac;
+}
+.content {
+  width: 100%;
+  height: 100%;
+}
+
+.item-block {
+  display: flex;
+  width: 100%;
+  min-height: 350px;
+  align-items: space-between;
+  justify-content: center;
+  flex-direction: column;
+}
+.item-title h3 a {
+  font-size: 3rem;
+  font-weight: bold;
+  text-decoration: none; 
+  color: rgb(0, 0, 0);
+  text-shadow:
+		-1px -1px 0 rgb(255, 255, 255),
+		1px -1px 0 rgb(255, 255, 255),
+		-1px 1px 0 rgb(255, 255, 255),
+		1px 1px 0 rgb(255, 255, 255);
+}
+.item-caption {
+  align-self: center;
+  font-style: italic;
+  max-width: 50%;
+  font-size: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.461);
+  color: black;
+  padding: 0.2rem;
+}
+.vote-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: 1rem;
+}
+.vote-section .votes {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.vote-section button {
+  align-self: center;
+  background-color: green;
+  color: black;
+  font-size: 1.5rem;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 30%;
+}
+.vote-section button.subtract {
+  background-color: rgb(172, 2, 2)
 }
